--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "input-sim with a wrapper to handle browser functionality",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/iamJoeTaylor/input-sim-with-browser.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "input",
@@ -21,9 +24,13 @@
   },
   "homepage": "https://github.com/iamJoeTaylor/input-sim-with-browser",
   "dependencies": {
-    "input-sim": "^2.0.0"
+    "input-sim": "^2.0.0",
+    "jsdom": "^1.1.0"
   },
   "devDependencies": {
-    "esnext": "^0.13.0"
+    "chai": "^1.9.2",
+    "esnext": "^0.13.0",
+    "keysim": "^1.0.2",
+    "mocha": "^2.0.1"
   }
 }
