--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "input-sim with a wrapper to handle browser functionality",
   "main": "index.js",
+  "jsnext:main": "index.js",
   "scripts": {
     "test": "make test"
   },
