--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "input-sim-with-browser",
   "version": "1.0.3",
   "description": "input-sim with a wrapper to handle browser functionality",
-  "main": "index.js",
-  "jsnext:main": "index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "lib/index.js",
   "scripts": {
     "test": "make test"
   },
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "chai": "^1.9.2",
+    "es6-module-transpiler": "^0.9.3",
     "esnext": "^0.13.0",
     "keysim": "^1.0.2",
     "mocha": "^2.0.1"
